tests/models/struct/named/usize/fail/default.stderr
error[E0308]: `?` operator has incompatible types
 --> tests/models/struct/named/usize/fail/default.rs:2:1
  |
2 | #[model]
  | ^^^^^^^^ expected `usize`, found floating-point number
  |
  = note: `?` operator cannot convert from `{float}` to `usize`
  = note: this error originates in the attribute macro `model` (in Nightly builds, run with -Z macro-backtrace for more info)
